<resources>
    <string name="app_name">Fiesta</string>

    <string name="phone_field_placeholder">Phone number</string>
    <string name="continue_button_text">Continue</string>
    <string name="incorrect_phone_number_text">Incorrect phone number!</string>

    <string name="confirmation_text"> Confirmation code is sent to \n %1$s </string>
    <string name="confirmation_placeholder">Code</string>
    <string name="confirm_button_text">Confirm</string>
    <string name="create_account">Create Account</string>
    <string name="email_address">Email Address</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="optional">Optional</string>
    <string name="profile_details">Profile details</string>
    <string name="please_complete_acc">Please complete your account</string>
    <string name="back_button">Back</string>
    <string name="profile_is_invalid_toast">Invalid first name</string>
    <string name="profile_is_complete_toast">Welcome</string>
    <string name="error_message_small">Incorrect data</string>
    <string name="clients_option_delete">Delete</string>
    <string name="clients_option_edit">Edit</string>
    <string name="title_clients">Clients</string>
    <string name="no_clients_yet">No clients yet</string>

    <string name="confirmed_text">Confirmed</string>
    <string name="title_client_creation">New client</string>
    <string name="button_save">Save</string>
    <string name="placeholder_zip_code">Zip code</string>
    <string name="search_view_placeholder">Search</string>
    <string name="placeholder_address">Address</string>
    <string name="example_address">Rochester, NY</string>
    <string name="placeholder_access_code">Access code</string>
    <string name="placeholder_access_information">Access information</string>
    <string name="toast_internet_connection_error">Failed to connect to server</string>
    <string name="toast_client_deletion_failed">Failed to delete client</string>
    <string name="button_edit">Edit</string>
    <string name="button_cancel">Cancel</string>
    <string name="cancel_text">Cancel</string>
    <string name="schedule_text">Schedule</string>
    <string name="new_appointment_text">New appointment</string>
    <string name="client_label">Client</string>
    <string name="start_time_text">Start</string>
    <string name="duration_text">Duration</string>
    <string name="price_text">Price</string>
    <string name="activity_text">Activity</string>
    <string name="notes_text">Notes</string>
    <string name="request_client_confirmation_text">Request client confirmation</string>
    <string name="imagebutton_description_add_appointment">Add appointment button</string>
    <string name="imagebutton_description_add_client">Add client button</string>
    <string name="imagebutton_description_call_the_client">Make a phone call to the client</string>
    <string name="imagebutton_description_write_sms_to_client">Start writing sms message to the client</string>
</resources>
